Layout e Tags Semantica

--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
-<!DOCTYPE html> <!--define a versao do documento html, que nesse caso e o HTML5-->
+<!--
+<!DOCTYPE html>
 <html>
     <head>
         <title>Portifolio</title>
     </head>
     <body>
         <h1>Isso e um titulo</h1>
-        <!--<h2>Isso e um subtitulo</h2>--> <!--Vai ate h6-->
         <p>Isso e um paragrafo</p>
-
-        <!--A tag img nao tem fechamento-->
-        <!--src - e uma propriedade chamada source, endereco da imagem-->
         <img src="html.png" alt="Logo do HTML 5">
-
-        <!--alt - e uma propriedade de texto alternativo da imagem, o texto do alt so aparece na tela
-            quando da algum problema na imagem, serve para descrever uma imagem-->
-            <!--<img rc="g" alt="Logo do HTML 5">--> <!--Como este codigo por exemplo-->
     </body>
+</html>
+-->
+
+<!--Use o atalho '!', para o VSCode gerar automaticamente todo esse codigo-->
+<!DOCTYPE html>
+<html lang="pt-br"> <!--Define a lingua do codigo-->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--E uma tag especifica para o Microsoft Edge-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Regula o tamanho da pagina-->
+    <title>Portifolio</title>
+</head>
+<body>
+    <header></header> <!--Cabecalho da pagina-->
+    <main> <!--Conteudo principal da pagina-->
+        <h1>Eleve seu negócio digital a outro nível 
+            <strong>com um Front-end de qualidade!</strong></h1>
+        <p>Olá! Sou Igor Fernando, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos         negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+
+        <a href="https://www.instagram.com/igorcasita/">Instagram</a> <!--tag ancora, redireciona para outro lugar a partir da propriedade href-->
+        <a href="https://github.com/igorfcfs/">GitHub</a>
+        <a href="https://www.linkedin.com/in/igor-fernando-silva-496076216/">Linkedin</a>
+
+        <img src="imagem.png" alt="Foto da Joana Santos programando">
+    </main>
+    <footer></footer> <!--Rodape da pagina-->
+</body>
 </html>
