--- a/index.html
+++ b/index.html
@@ -1,39 +1,26 @@
-<!--
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Portifolio</title>
-    </head>
-    <body>
-        <h1>Isso e um titulo</h1>
-        <p>Isso e um paragrafo</p>
-        <img src="html.png" alt="Logo do HTML 5">
-    </body>
-</html>
--->
-
-<!--Use o atalho '!', para o VSCode gerar automaticamente todo esse codigo-->
-<!DOCTYPE html>
-<html lang="pt-br"> <!--Define a lingua do codigo-->
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--E uma tag especifica para o Microsoft Edge-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Regula o tamanho da pagina-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
+    <!--rel - indica qual a relacao de um documento html com um documento css-->
+    <link rel="stylesheet" href="style.css"> <!--link - e como se importasse um arquivo-->
 </head>
 <body>
-    <header></header> <!--Cabecalho da pagina-->
-    <main> <!--Conteudo principal da pagina-->
+    <header></header>
+    <main>
         <h1>Eleve seu negócio digital a outro nível 
             <strong>com um Front-end de qualidade!</strong></h1>
         <p>Olá! Sou Igor Fernando, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos         negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
 
-        <a href="https://www.instagram.com/igorcasita/">Instagram</a> <!--tag ancora, redireciona para outro lugar a partir da propriedade href-->
+        <a href="https://www.instagram.com/igorcasita/">Instagram</a>
         <a href="https://github.com/igorfcfs/">GitHub</a>
         <a href="https://www.linkedin.com/in/igor-fernando-silva-496076216/">Linkedin</a>
 
         <img src="imagem.png" alt="Foto da Joana Santos programando">
     </main>
-    <footer></footer> <!--Rodape da pagina-->
+    <footer></footer>
 </body>
 </html>
